Added realisation of functions/Fixed other functions

--- a/.gitignore
+++ b/.gitignore
@@ -42,12 +42,11 @@ Testing/
 sfedu_ictis_ap_dsa
 
 #implementations
-List.cpp
-Array.cpp
-Queue.cpp
-Stack.cpp
-
 venv/
 *.csv
 
-
+# other
+out
+*.swp
+*.png
+imgs
